--- a/DriverStation.csproj
+++ b/DriverStation.csproj
@@ -28,6 +28,11 @@
 
   <ItemGroup>
     <PackageReference Include="HidApi.Net" Version="1.1.0" />
+    <PackageReference Include="WatchdogDotNet" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="NetCoreServer\" />
   </ItemGroup>
 
 </Project>
