--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,7 +13,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "@msgpack/msgpack": "^3.0.0-beta2",
-    "reconnecting-websocket": "^4.4.0"
+    "reconnecting-websocket": "^4.4.0",
+    "@mui/joy": "^5.0.0-beta.48",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/inter": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
