--- a/DriverStation.csproj
+++ b/DriverStation.csproj
@@ -38,8 +38,8 @@
 
   <ItemGroup>
     <PackageReference Include="HidApi.Net" Version="1.1.0" />
-    <PackageReference Include="MessagePack" Version="3.0.238-rc.1" />
-    <PackageReference Include="MessagePackAnalyzer" Version="3.0.238-rc.1">
+    <PackageReference Include="MessagePack" Version="3.0.300" />
+    <PackageReference Include="MessagePackAnalyzer" Version="3.0.300">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
